--- a/frontEnd/src/style.css
+++ b/frontEnd/src/style.css
@@ -2,3 +2,24 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer components {
+    .flex-jc-sa {
+        justify-content: space-around;
+    }
+
+    .flex-jc-sb {
+        justify-content: space-between;
+    }
+
+    .flex-jc-c {
+        justify-content: center;
+    }
+
+    .flex-jc-fs {
+        justify-content: flex-start;
+    }
+
+    .flex-jc-fe {
+        justify-content: flex-end;
+    }
+}
